feat: webapp 디렉토리의 index.html 파일을 읽어 클라이언트에 응답하는 기능 구현